--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ p {
   border: 2px double white;
   border-radius: 5px;
   margin-top: 5px;
-  box-shadow: 1px 1px 1px black;
+  box-shadow: 0px 0px 5px rgb(255, 132, 0);
 }
 
 .terminado {
@@ -79,18 +79,20 @@ p {
 
 .vale {
   color: black;
-  border-radius: 1px;
+  border-radius: 2px;
   border: 1px outset black;
+  box-shadow: 5px 5px 5px rgb(159, 103, 0);
 }
 
 button {
   margin: 20px 0 0 0;
   color: white;
-  border: 1px dashed black;
+  border: 1px solid orange;
   border-radius: 3px;
+  box-shadow: 0px 0px 10px rgb(255, 189, 65);
   padding: 15px 15px;
   font-size: 20px;
-  background-color: rgb(255, 145, 0);
+  background-color: rgb(255, 156, 27);
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
