--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ h1 {
   font-family: 'Courier New', Courier, monospace;
   font-size: 40px;
   margin: 40px 0 10px 0;
-  text-shadow: 0 0 5px orange;
+  text-shadow: 1px 1px 5px rgb(255, 199, 120), 0 0 5px rgb(255, 149, 0);
 }
 
 .numero,
@@ -41,7 +41,6 @@ h1 {
   right: 46%;
   top: 1px
 }
-
 
 p {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -63,8 +62,9 @@ p {
   background-color: white;
   color: black;
   padding: auto;
-  border: 1px solid black;
-  box-shadow: 1px 1px 1px black;
+  border: 3px outset rgb(129, 73, 0);
+  box-shadow: 5px 5px 5px rgb(159, 103, 0);
+
 }
 
 .none {
@@ -107,7 +107,6 @@ button:hover {
 .terminado {
   padding: 10px;
 }
-
 
 .App-header {
   background: linear-gradient(0deg, rgb(255, 123, 0), rgb(255, 178, 107), white);
