--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ p {
   padding: auto;
   border: 3px outset rgb(129, 73, 0);
   box-shadow: 5px 5px 5px rgb(159, 103, 0);
-
+  margin: 50px 0;
 }
 
 .none {
